<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@color/cardColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/informations_view"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/demo_produit"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/nom_produit_label"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/nom_produit"
            android:textSize="12sp"
            android:text="@string/nom_produit_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nom_produit"/>

        <TextView
            android:id="@+id/nom_produit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/nom_produit_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/type_alcool_label"/>

        <TextView
            android:id="@+id/type_alcool_label"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/type_alcool"
            android:textSize="12sp"
            android:text="@string/type_alcool_label"
            app:layout_constraintTop_toBottomOf="@id/nom_produit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/type_alcool"/>

        <TextView
            android:id="@+id/type_alcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/type_alcool_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pays_origine_label"/>

        <TextView
            android:id="@+id/pays_origine_label"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/pays_origine"
            android:textSize="12sp"
            android:text="@string/pays_origine_label"
            app:layout_constraintTop_toBottomOf="@id/type_alcool"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pays_origine"/>

        <TextView
            android:id="@+id/pays_origine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/pays_origine_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/type_alcool"/>

        <TextView
            android:id="@+id/producteur_label"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/producteur"
            android:textSize="12sp"
            android:text="@string/producteur_label"
            app:layout_constraintTop_toBottomOf="@id/pays_origine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/producteur"/>

        <TextView
            android:id="@+id/producteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/producteur_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/demo_produit"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/demo_produit_label"
        android:src="@drawable/ic_baseline_wine_bar_24"
        app:layout_constraintStart_toEndOf="@id/informations_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>